manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-app-ingress
  namespace: ml-service
spec:
  ingressClassName: nginx
  rules:
    - host: creditcard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ml-app
                port:
                  number: 8000
